# ESGF-Playground

./: .gitignore  README.md  docker-compose.yml  tox.ini
.github/workflows/: esgf-api-ingest-check.yml  esgf-consumer-check.yml  esgf-generator-check.yml  esgf-playground-utils-check.yml  esgf-transaction-api-check.yml  tox.yaml
elasticsearch/config/: elasticsearch-core.yml  elasticsearch-secondary.yml
esgf-api-ingest/: Dockerfile  pyproject.toml
esgf-api-ingest/esgf_api_ingest/: config.py  main.py
esgf-consumer/: Dockerfile  pyproject.toml
esgf-consumer/esgf_consumer/: __init__.py  cli.py  collection.py  config.py  consumers.py  exceptions.py  items.py  models.py  mongo_consumer.py  producers.py
esgf-generator/: pyproject.toml
esgf-generator/esgf_generator/: __init__.py  cli.py  data.py  models.py  stac-esfg-factory-choices.json  static_generators.py  test_cli.py
esgf-playground-utils/: pyproject.toml
esgf-playground-utils/esgf_playground_utils/config/: kafka.py
esgf-playground-utils/esgf_playground_utils/models/: item.py  kafka.py
esgf-transaction-api/: Dockerfile  pyproject.toml
esgf-transaction-api/esgf_transaction_api/: main.py
