[tool.poetry]
name = "esgf-consumer"
version = "0.1.0"
description = "A simple consumer for the ESGF playground"
authors = ["david.poulter <david.poulter@stfc.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiokafka = "^0.11.0"
httpx = "^0.27.0"
click = "^8.1.7"
pydantic-settings = "^2.3.4"
stac-pydantic = "^3.1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
isort = "^5.13.2"
ruff = "^0.5.2"
black = "^24.4.2"

[tool.poetry.scripts]
esgf_kafka_consumer = "esgf_consumer.cli:esgf_kafka_consumer"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
