[tool.poetry]
name = "esgf-generator"
version = "0.1.0"
description = ""
authors = ["david.poulter <david.poulter@stfc.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
stac-pydantic = "^3.1.1"
polyfactory = "^2.16.2"
httpx = "^0.27.0"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
isort = "^5.13.2"
ruff = "^0.5.2"
black = "^24.4.2"

[tool.poetry.scripts]
esgf_generator = "esgf_generator.cli:esgf_generator"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
