[tool.poetry]
name = "esgf-generator"
version = "0.1.0"
description = ""
authors = ["david.poulter <david.poulter@stfc.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polyfactory = "^2.16.2"
httpx = "^0.27.0"
click = "^8.1.7"
esgf-playground-utils = "0.1.0"


[tool.poetry.group.black.dependencies]
black = "^24.4.2"


[tool.poetry.group.mypy.dependencies]
mypy = "^1.10.1"


[tool.poetry.group.bandit.dependencies]
bandit = "^1.7.9"


[tool.poetry.group.ruff.dependencies]
ruff = "^0.5.2"


[tool.poetry.group.isort.dependencies]
isort = "^5.13.2"


[tool.poetry.group.xenon.dependencies]
xenon = "^0.9.1"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"

[tool.poetry.scripts]
esgf_generator = "esgf_generator.cli:esgf_generator"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
