[tool.poetry]
name = "esgf-playground-utils"
version = "0.1.0"
description = "Common library and models for the ESGF-Playground"
authors = ["david.poulter <david.poulter@stfc.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.3.4"
stac-pydantic = "^3.1.1"

[tool.poetry.group.black.dependencies]
black = "^24.4.2"


[tool.poetry.group.mypy.dependencies]
mypy = "^1.10.1"
pydantic = "^2.8.2"


[tool.poetry.group.bandit.dependencies]
bandit = "^1.7.9"


[tool.poetry.group.ruff.dependencies]
ruff = "^0.5.2"


[tool.poetry.group.isort.dependencies]
isort = "^5.13.2"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
